--- a/app-abolish.css
+++ b/app-abolish.css
@@ -1,33 +1,11 @@
-html,body{
-    position: absolute;
-    top: 0;
-    bottom: 0;
-    left: 0;
-    right: 0;
+html, body {
     box-sizing: border-box;
     font-size: 10px;
-    overflow-x: hidden;
+    min-width: 300px;
 }
-.input{
-    height: 30px;
-    border-radius: 10px;
-    border: 2px #80CFED solid;
-    background-color: #FFFFFF;
-    padding-left: 10px;
-    padding-right: 10px;
-    transition: 0.2s ease-in-out;
-    outline: none;
-    font-size: 0.8em;
-    line-height: 30px;
-}
-.inputInvalid{
-    border: 2px #FF0000 solid;
-}
-.input:focus{
-    border: 2px #2F99E5 solid;
-}
-@media screen and (max-width: 850px){
-    #wrapper::before{
+
+@media screen and (max-width: 850px) {
+    #wrapper::before {
         content: '';
         background-image: url("./FEBeKPZaUAAWgpm.jpg");
         background-position: center;
@@ -41,86 +19,112 @@ html,body{
         bottom: 0;
         z-index: -1;
     }
-    #bannerWrapper{
+
+    #bannerWrapper {
         display: flex;
         align-items: center;
         padding: 20px;
     }
-    .mainTitle{
+
+    .mainTitle {
         flex-grow: 1;
         font-size: 3em;
     }
-    #userTitle{
+
+    #userTitle {
         font-size: 2em;
     }
-    #categoryWrapper{
+
+    #categoryWrapper {
         margin: 20px 25px;
         padding-top: 3px;
         padding-bottom: 3px;
-        font-size: 1.7em;
-        border-radius: 20px;
+        border-radius: 200px;
         background-color: #2F99E5;
-        box-shadow: rgba(0,0,0,0.2) -2px -2px 5px inset;
+        box-shadow: rgba(0, 0, 0, 0.2) -2px -2px 5px inset;
         display: flex;
         justify-content: space-around;
         justify-items: center;
+        min-width: 250px;
     }
-    .category{
+
+    .category {
+        font-size: 1.8em;
         padding: 3px 15px 4px 15px;
-        border-radius: 20px;
+        border-radius: 200px;
         cursor: pointer;
+        line-height: 1;
     }
-    .category.catSelected{
+
+    .category:nth-child(1) {
+        margin-left: 3px;
+    }
+
+    .category:nth-last-child(1) {
+        margin-right: 3px;
+    }
+
+    .category.catSelected {
         background-image: linear-gradient(to right, #85D0E7 0%, #80CFED 100%);
-        box-shadow: rgba(0,0,0,0.2) 2px 2px 5px;
+        box-shadow: rgba(0, 0, 0, 0.2) 2px 2px 5px;
     }
-    #scrollWrapper{
-        width: 300vw;
-        display: flex;
-        position: relative;
-        transition: left 0.4s ease-in-out;
-    }
-    .pageTodo{
-        left: 0;
-    }
-    .pageDoing{
-        left: -100vw;
-    }
-    .pageDone{
-        left: -200vw;
-    }
-    .todoSection{
-        width: 100vw;
+
+    .todoSection {
+        position: absolute;
+        z-index: -1;
+        top: 145px;
         opacity: 0;
-        transition: opacity 0.4s linear;
+        transition: 0.4s ease-in-out;
+        padding-top: 20px;
+        padding-bottom: 20px;
+        left: 0;
+        right: 0;
     }
-    .activeSection{
+    .leftSection{
+        left: -100vw;
+        right: 100vw;
+    }
+    .rightSection{
+        left: 100vw;
+        right: -100vw;
+    }
+    .activeSection {
+        left: 0;
+        right: 0;
         opacity: 100%;
+        position: static;
+        z-index: 1;
     }
-    .eachWrapper{
-        margin-left: 20px;
-        margin-right: 20px;
+
+    .eachWrapper {
+        margin: 0 20px 20px 20px;
         font-size: 1.6em;
         display: flex;
         background-color: rgba(255, 255, 255, 0.6);
         border-radius: 20px;
     }
-    .monoWrapper{
+
+    .todoWrapper {
         padding: 20px 0 20px 15px;
+        flex-grow: 1;
     }
-    .monoTitle{
+
+    .todoTitle {
         font-size: 1.3em;
         font-weight: bold;
     }
-    .monoTime{
+
+    .todoTime {
         font-size: 0.8em;
         color: #8c8c8c;
     }
-    .funcWrapper{
+
+    .funcWrapper {
         display: flex;
         flex-direction: column;
     }
-    .funcWrapper>div{
+
+    .funcWrapper > div {
         width: 65px;
         flex-grow: 1;
         display: flex;
@@ -128,22 +132,27 @@ html,body{
         justify-content: center;
         cursor: pointer;
     }
-    .funcWrapper>div>p{
+
+    .funcWrapper > div > p {
         margin-top: 5px;
         margin-bottom: 5px;
     }
-    .funcMove{
+
+    .funcMove {
         background-color: rgba(100, 170, 60, 0.8);
         border-top-right-radius: 20px;
     }
-    .funcEdit{
+
+    .funcEdit {
         background-color: rgba(47, 153, 229, 0.8);
     }
-    .funcDelete{
+
+    .funcDelete {
         background-color: rgba(230, 67, 67, 0.8);
         border-bottom-right-radius: 20px;
     }
 }
-@media screen and (min-width:850px){
+
+@media screen and (min-width: 850px) {
 
 }
