--- a/app.css
+++ b/app.css
@@ -47,6 +47,11 @@ body::before {
     font-size: 2em;
 }
 
+#btnLogout, #btnCancel, #btnConfirmLogout {
+    font-size: 0.8em;
+    padding: 3px 12px 4px 12px;
+}
+
 #categoryWrapper {
     padding-top: 3px;
     padding-bottom: 3px;
@@ -216,13 +221,16 @@ body::before {
     flex-grow: 1;
 }
 
-#addCtrlClose {
+#addCtrlClose, #btnLogout, #btnCancel, #btnConfirmLogout {
     background-color: #2F99E5;
-    padding: 5px 20px 6px 20px;
     border-radius: 100px;
     text-align: center;
     cursor: pointer;
     user-select: none;
+}
+
+#addCtrlClose {
+    padding: 5px 20px 6px 20px;
 }
 
 #addFormWrapper {
